@@ -135,8 +135,8 @@ stan_llh <- function(family, bterms, data = NULL,
   type <- c("cens", "weights")[match(TRUE, c(has_cens, has_weights))]
   if (is.na(type)) type <- "general"
   llh <- switch(type, 
-    cens = stan_llh_cens(llh_pre, family, interval, has_weights),
-    weights = stan_llh_weights(llh_pre, family),
+    cens = stan_llh_cens(llh_pre, family, interval, has_weights, bounds),
+    weights = stan_llh_weights(llh_pre, family, bounds),
     general = stan_llh_general(llh_pre, reqn, bounds)) 
   if (reqn) {
     # loop over likelihood if it cannot be vectorized
@@ -151,20 +151,13 @@ stan_llh_general <- function(llh_pre, reqn = FALSE, bounds = NULL) {
   #   reqn: does Y require the index 'n'?
   #   bounds: a list containing elements lb and ub
   stopifnot(length(llh_pre) == 2L)
-  if (any(bounds$lb > -Inf) || any(bounds$ub < Inf)) {
-    # prepare possible truncation
-    lb <- ifelse(any(bounds$lb > -Inf), "lb[n]", "")
-    ub <- ifelse(any(bounds$ub < Inf), "ub[n]", "")
-    trunc <- paste0(" T[", lb, ", ", ub, "]")
-  } else {
-    trunc <- ""
-  }
+  tr <- stan_llh_trunc(llh_pre, bounds = bounds)
   paste0("  Y", ifelse(reqn, "[n]", ""), " ~ ", llh_pre[1], 
-         "(", llh_pre[2], ")", trunc, "; \n")
+         "(", llh_pre[2], ")", tr, "; \n")
 }
 
-stan_llh_cens <- function(llh_pre, family = gaussian(), 
-                          interval = FALSE, weights = FALSE) {
+stan_llh_cens <- function(llh_pre, family, interval = FALSE, 
+                          weights = FALSE, bounds = NULL) {
   # censored likelihood in Stan language
   # Args: 
   #   interval: are there interval censored responses present?
@@ -174,29 +167,68 @@ stan_llh_cens <- function(llh_pre, family = gaussian(),
   tp <- "  target += "
   lpdf <- ifelse(use_int(family), "lpmf", "lpdf")
   w <- ifelse(weights, "weights[n] * ", "")
+  tr <- stan_llh_trunc(llh_pre, bounds = bounds, general = FALSE)
+  if (interval) {
+    int_cens <- paste0(
+      s, "} else if (cens[n] == 2) { \n",
+      s, tp, w, "log_diff_exp(", 
+      llh_pre[1], "_lcdf(rcens[n] | ", llh_pre[2], "), \n",
+      collapse(rep(" ", 31)),
+      llh_pre[1], "_lcdf(Y[n] | ", llh_pre[2], "))", tr, "; \n"
+    )
+  } else {
+    int_cens <- ""
+  }
   paste0("  // special treatment of censored data \n",
-    s, "if (cens[n] == 0) \n", 
-    s, tp, w, llh_pre[1], "_", lpdf, "(Y[n] | ", llh_pre[2], "); \n",
-    s, "else if (cens[n] == 1) \n",         
-    s, tp, w, llh_pre[1], "_lccdf(Y[n] | ", llh_pre[2], "); \n",
-    s, "else if (cens[n] == -1) \n",
-    s, tp, w, llh_pre[1], "_lcdf(Y[n] | ", llh_pre[2], "); \n",
-    if (interval) {
-      paste0(
-        s, "else if (cens[n] == 2) \n",
-        s, tp, w, "log_diff_exp(", 
-          llh_pre[1], "_lcdf(rcens[n] | ", llh_pre[2], "), \n",
-        collapse(rep(" ", 31)),
-          llh_pre[1], "_lcdf(Y[n] | ", llh_pre[2], ")); \n")
-    })
+    s, "if (cens[n] == 0) {\n", 
+    s, tp, w, llh_pre[1], "_", lpdf, "(Y[n] | ", llh_pre[2], ")", tr, ";\n",
+    s, "} else if (cens[n] == 1) {\n",         
+    s, tp, w, llh_pre[1], "_lccdf(Y[n] | ", llh_pre[2], ")", tr, ";\n",
+    s, "} else if (cens[n] == -1) {\n",
+    s, tp, w, llh_pre[1], "_lcdf(Y[n] | ", llh_pre[2], ")", tr, ";\n",
+    int_cens, s, "} \n"
+  )
 }
 
-stan_llh_weights <- function(llh_pre, family = gaussian()) {
+stan_llh_weights <- function(llh_pre, family, bounds = NULL) {
   # weighted likelihood in Stan language
   stopifnot(length(llh_pre) == 2L)
+  tr <- stan_llh_trunc(llh_pre, bounds = bounds, general = FALSE)
   lpdf <- ifelse(use_int(family), "lpmf", "lpdf")
   paste0("  lp_pre[n] = ", llh_pre[1], "_", lpdf, 
-         "(Y[n] | ", llh_pre[2],"); \n")
+         "(Y[n] | ", llh_pre[2],")", tr, "; \n")
+}
+
+stan_llh_trunc <- function(llh_pre, bounds, general = TRUE) {
+  # truncated part of the likelihood
+  # Args:
+  #   general: use the T[, ] syntax?
+  if (general) {
+    if (any(bounds$lb > -Inf) || any(bounds$ub < Inf)) {
+      # truncation using T[, ] syntax
+      lb <- ifelse(any(bounds$lb > -Inf), "lb[n]", "")
+      ub <- ifelse(any(bounds$ub < Inf), "ub[n]", "")
+      tr <- paste0(" T[", lb, ", ", ub, "]")
+    } else {
+      tr <- ""
+    }
+  } else {
+    # truncation making use of _lcdf functions
+    ms <- paste0(" - \n", collapse(rep(" ", 18)))
+    if (any(bounds$lb > -Inf) && !any(bounds$ub < Inf)) {
+      tr <- paste0(ms, llh_pre[1], "_lccdf(lb[n] | ", llh_pre[2], ")")
+    } else if (!any(bounds$lb > -Inf) && any(bounds$ub < Inf)) {
+      tr <- paste0(ms, llh_pre[1], "_lcdf(ub[n] | ", llh_pre[2], ")")
+    } else if (any(bounds$lb > -Inf) && any(bounds$ub < Inf)) {
+      trr <- paste0(llh_pre[1], "_lcdf(ub[n] | ", llh_pre[2], ")")
+      trl <- paste0(llh_pre[1], "_lcdf(lb[n] | ", llh_pre[2], ")")
+      tr <- paste0(ms, "log_diff_exp(", trr, ", \n",
+                   collapse(rep(" ", 31)), trl, ")")
+    } else {
+      tr <- ""
+    }
+  }
+  tr
 }
 
 stan_llh_sigma <- function(family, bterms = NULL, autocor = cor_arma()) {
